--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,74 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+/* global.css o page.module.css */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    background-color: #f3f4f6; /* bg-gray-100 */
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.p-card {
+    background-color: #fff;
+    padding: 2rem;
+    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
+    
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.logo-image {
+    border-radius: 0.5rem;
+    display: block;
+    margin: 0 auto 1.5rem auto;
+}
+
+.p-title {
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    color: #111827;
+    text-align: center;
+}
+
+small {
+    display: block;
+    margin-bottom: 1rem;
+    color: #dc2626; /* text-red-600 */
+}
+
+.p-button {
+    width: 50%;
+    margin-top: 0.5rem;
+}
+
+.large-input {
+    width: 100%;
+    margin-bottom: 10px;
+    color: #111827; /* text-gray-900 */
+}
+
+.dashboard-layout {
+    display: flex;
+    flex-direction: row; /* Cambia de "column" a "row" para columnas horizontales */
+    width: 100vw; /* Ancho completo del viewport */
+}
+
+/* Columna izquierda (10vh de ancho) */
+.dashboard-sidebar {
+    width: 14vh;
+    padding: 1rem;
+    background-color: #fff; /* Fondo blanco */
+}
+
+/* Columna derecha (toma el resto del espacio) */
+.dashboard-main {
+    flex: 1; /* Ocupa todo el espacio disponible */
+    overflow: auto; /* Permite scroll si el contenido es largo */
+    width: 90vh; /* Ajusta el ancho al 90% del viewport */
+    height: 100%;
+
 }
